--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dailyhot",
   "description": "今日热榜",
   "author": "mixfog",
-  "github": "https://github.com/imsyy",
+  "github": "https://mixfog.com/",
   "version": "1.0.0",
   "private": true,
   "scripts": {
