--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@icon-park/vue-next": "^1.4.2",
     "@jridgewell/sourcemap-codec": "^1.4.14",
+    "@vercel/analytics": "^1.2.2",
     "axios": "^1.3.3",
     "lunar-calendar": "^0.1.4",
     "pinia": "^2.0.28",
